--- a/less/concise.less
+++ b/less/concise.less
@@ -13,7 +13,7 @@
 
 
 //------------------------------------//
-//  $CONTENTS
+//  @CONTENTS
 //------------------------------------//
 // 
 // CONTENTS
@@ -57,7 +57,7 @@
  
 
 //------------------------------------//
-//  $IMPORTS  
+//  @IMPORTS  
 //------------------------------------// 
 // Generic utility styles
 @import "defaults";
