--- a/less/generic/_debug.less
+++ b/less/generic/_debug.less
@@ -1,6 +1,6 @@
-@if $debug-mode == true {
+@if @debug-mode == true {
 	//------------------------------------//
-	//	$DEBUG
+	//	@DEBUG
 	//------------------------------------//
 	// Big thanks to Harry Roberts of CSS Wizardry for this great
 	// tool. https://github.com/csswizardry/inuit.css/blob/master/_inuit.scss
