--- a/less/base/_blockquotes.less
+++ b/less/base/_blockquotes.less
@@ -1,4 +1,4 @@
-@if $use-blockquotes == true {
+@if @use-blockquotes == true {
     //------------------------------------//
     //  $BLOCKQUOTES
     //------------------------------------//
@@ -13,7 +13,7 @@
         cite {
             color: #555;
             display: block;
-            @include font-size(14px);
+            .font-size(14px);
             
             &:before { content: "\2014 \0020"; }
             
