--- a/less/base/_main.less
+++ b/less/base/_main.less
@@ -1,13 +1,13 @@
-@if $use-main == true {
+@if @use-main == true {
     //------------------------------------//
     //  $MAIN
     //------------------------------------//
-    @if $global-border-box == true {
+    @if @global-border-box == true {
         *{
             &,
             &:before,
             &:after {
-                @include vendor(box-sizing, border-box);
+                .vendor(box-sizing, border-box);
             }
         }
     }
@@ -15,8 +15,8 @@
     html, 
 	body {
         background-color: #fff;
-        color: $base-font-color;
-        font: normal normal #{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
+        color: @base-font-color;
+        font: normal normal #{(@base-font-size/16px)*1em}/#{@line-height-ratio} @base-font-family;
         margin: 0;
         
         text-rendering: optimizeLegibility;
