--- a/less/base/_tables.less
+++ b/less/base/_tables.less
@@ -1,4 +1,4 @@
-@if $use-tables == true {
+@if @use-tables == true {
     //------------------------------------//
     //  $TABLES
     //------------------------------------//
@@ -26,13 +26,13 @@
         
         
         // Background colors
-        .bg-light-green { color: $color-green; }
+        .bg-light-green { color: @color-green; }
         
-        .bg-light-blue { color: $color-blue; }
+        .bg-light-blue { color: @color-blue; }
         
-        .bg-light-yellow { color: $color-yellow; }
+        .bg-light-yellow { color: @color-yellow; }
         
-        .bg-light-red { color: $color-red; }
+        .bg-light-red { color: @color-red; }
         
         
         // Full-width table
@@ -63,7 +63,7 @@
 		&.fill-odd tbody tr:nth-child(odd) { background-color: #f9f9f9; }
     }
 
-    @include breakpoint(extra-small) {
+    .breakpoint(extra-small) {
         table.table {
             width: auto;
             
