--- a/less/generic/_conditional.less
+++ b/less/generic/_conditional.less
@@ -1,4 +1,4 @@
-@if $use-conditional == true {
+@if @use-conditional == true {
     //------------------------------------//
     //  $CONDITIONAL
     //------------------------------------//
@@ -20,7 +20,7 @@
         visibility: hidden;
     }
 
-    @include breakpoint(small) {
+    .breakpoint(small) {
         .show-medium, 
 		.hide-small, 
 		.hide-large {
@@ -36,7 +36,7 @@
         }
     }
 
-    @include breakpoint(large) {
+    .breakpoint(large) {
         .show-large, 
 		.hide-small, 
 		.hide-medium {
