--- a/less/generic/_helper.less
+++ b/less/generic/_helper.less
@@ -1,4 +1,4 @@
-@if $use-helper == true {
+@if @use-helper == true {
     //------------------------------------//
     //  $HELPER
     //------------------------------------//
@@ -25,7 +25,7 @@
     // Displaying content
     .inline { display: block; }
 
-    @include breakpoint(extra-small) { .inline { display: inline; } }
+    .breakpoint(extra-small) { .inline { display: inline; } }
 
     .show {
         display: block;
