--- a/less/generic/_shared.less
+++ b/less/generic/_shared.less
@@ -1,4 +1,4 @@
-@if $use-shared == true {
+@if @use-shared == true {
     //------------------------------------//
     //  $SHARED
     //------------------------------------//
@@ -15,15 +15,15 @@
     pre,
     .row,
     .well {
-        margin-bottom: $base-spacing-unit;
-        margin-bottom: ($base-spacing-unit / $base-font-size) * 1rem;
+        margin-bottom: @base-spacing-unit;
+        margin-bottom: (@base-spacing-unit / @base-font-size) * 1rem;
     }
 
 
     // Spacing for <hr> tags
     hr {
-        margin-bottom: $base-spacing-unit - 2px;
-        margin-bottom: (($base-spacing-unit - 2px) / $base-font-size) * 1rem;
+        margin-bottom: @base-spacing-unit - 2px;
+        margin-bottom: ((@base-spacing-unit - 2px) / @base-font-size) * 1rem;
     }
 
 
@@ -31,7 +31,7 @@
     ul, 
 	ol, 
 	dd {
-        margin-left: 2 * $base-spacing-unit;
-        margin-left: (2 * $base-spacing-unit / $base-font-size) * 1rem;
+        margin-left: 2 * @base-spacing-unit;
+        margin-left: (2 * @base-spacing-unit / @base-font-size) * 1rem;
     }
 }
