--- a/less/objects/_breadcrumbs.less
+++ b/less/objects/_breadcrumbs.less
@@ -1,9 +1,9 @@
-@if $use-breadcrumbs == true {
+@if @use-breadcrumbs == true {
     //------------------------------------//
     //  $BREADCRUMBS
     //------------------------------------//
     .breadcrumbs {
-        @include font-size(13px);
+        .font-size(13px);
         margin: 12px 0;
         padding: 5px 15px 5px 0;
         
