--- a/less/objects/_progress.less
+++ b/less/objects/_progress.less
@@ -1,29 +1,29 @@
-@if $use-progress == true {
+@if @use-progress == true {
     //------------------------------------//
     //  $PROGRESS
     //------------------------------------//
     .progress {
         background-color: #f9f9f9;
         color: #fff;
-        @include font-size(11px); 
+        .font-size(11px); 
         height: 12px;
         margin: 6px 0;
         position: relative;
         text-align: center;
         width: 100%;
         
-        @include vendor(box-shadow, inset 0 1px 1px rgba(100, 100, 100, 0.1));
+        .vendor(box-shadow, inset 0 1px 1px rgba(100, 100, 100, 0.1));
         
-        @include vendor(box-sizing, initial);
+        .vendor(box-sizing, initial);
     }
 
     .progress-small {
-        @include font-size(9px); 
+        .font-size(9px); 
         height: 6px;
     }
 
     .progress-large {
-        @include font-size($base-font-size); 
+        .font-size(@base-font-size); 
         height: 25px;
     }
 
@@ -39,7 +39,7 @@
         
         
         // Rounded corners
-        &.border-radius > span { border-radius: $border-radius; }
+        &.border-radius > span { border-radius: @border-radius; }
         
         
         // Stacked
@@ -52,9 +52,9 @@
             &.border-radius > span {
                 border-radius: 0px;
                 
-                &:first-of-type { border-radius: $border-radius 0 0 $border-radius; }
+                &:first-of-type { border-radius: @border-radius 0 0 @border-radius; }
                 
-                &:last-of-type { border-radius: 0 $border-radius $border-radius 0; }
+                &:last-of-type { border-radius: 0 @border-radius @border-radius 0; }
             }
         }
     }
@@ -73,7 +73,7 @@
                 top: 0;
                 z-index: 1;
 
-                @include vendor(background-size, 50px 50px);
+                .vendor(background-size, 50px 50px);
                 
                 background-image: 
                     -webkit-gradient(linear, 0 0, 100% 100%, color-stop(0.25, rgba(255, 255, 255, 0.2)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.2)), color-stop(0.75, rgba(255, 255, 255, 0.2)), color-stop(0.75, transparent), to(transparent));
@@ -86,7 +86,7 @@
         // Animated 
         &.animate > span {
             &:after, > span {             
-                @include vendor(animation, move 2s linear infinite);
+                .vendor(animation, move 2s linear infinite);
             }
         }
     }
