--- a/less/objects/_wells.less
+++ b/less/objects/_wells.less
@@ -1,4 +1,4 @@
-@if $use-wells == true {
+@if @use-wells == true {
     //------------------------------------//
     //  $WELLS
     //------------------------------------//
@@ -18,7 +18,7 @@
         
         pre, 
 		.pre.well {
-            @include font-size(14px); 
+            .font-size(14px); 
             padding: 10px 15px;
         }
     }
@@ -42,32 +42,32 @@
         
         &.bg-black { border-color: #000; }
         
-        &.bg-green { border-color: darken($bg-green, 15%); }
+        &.bg-green { border-color: darken(@bg-green, 15%); }
         
         &.bg-light-green {
-            border-color: darken($bg-green, 15%);
-            color: $color-green;
+            border-color: darken(@bg-green, 15%);
+            color: @color-green;
         }
         
-        &.bg-blue { border-color: darken($bg-blue, 15%); }
+        &.bg-blue { border-color: darken(@bg-blue, 15%); }
         
         &.bg-light-blue {
-            border-color: darken($bg-blue, 15%);
-            color: $color-blue;
+            border-color: darken(@bg-blue, 15%);
+            color: @color-blue;
         }
         
-        &.bg-yellow { border-color: darken($bg-yellow, 15%); }
+        &.bg-yellow { border-color: darken(@bg-yellow, 15%); }
         
         &.bg-light-yellow {
-            border-color: darken($bg-yellow, 15%);
-            color: $color-yellow;
+            border-color: darken(@bg-yellow, 15%);
+            color: @color-yellow;
         }
         
-        &.bg-red { border-color: darken($bg-red, 15%); }
+        &.bg-red { border-color: darken(@bg-red, 15%); }
         
         &.bg-light-red {
-            border-color: darken($bg-red, 15%);
-            color: $color-red;
+            border-color: darken(@bg-red, 15%);
+            color: @color-red;
         }
     }
 
@@ -77,7 +77,7 @@
         color: #000;
         filter: alpha(opacity = 20);
         float: right;
-        @include font-size(22px); 
+        .font-size(22px); 
         font-weight: bold;
         opacity: .2;
         
@@ -88,7 +88,7 @@
             opacity: .5;
             text-decoration: none;
             
-            @include vendor(transition, all 0.2s linear);
+            .vendor(transition, all 0.2s linear);
         }
     }
 
