--- a/less/concise.less
+++ b/less/concise.less
@@ -60,47 +60,47 @@
 //  @IMPORTS  
 //------------------------------------// 
 // Generic utility styles
-@import "defaults";
-@import "generic/mixins";
-@import "generic/normalize";
-@import "generic/clearfix";
-@import "generic/shared";
+@import "_defaults.less";
+@import "generic/_mixins.less";
+@import "generic/_normalize.less";
+@import "generic/_clearfix.less";
+@import "generic/_shared.less";
 
 
 
 
 // Base styles
-@import "base/main";
-@import "base/selection";
-@import "base/container";
-@import "base/type";
-@import "base/headings";
-@import "base/blockquotes";
-@import "base/lists";
-@import "base/tables";
-@import "base/forms";
-@import "base/grid";
+@import "base/_main.less";
+@import "base/_selection.less";
+@import "base/_container.less";
+@import "base/_type.less";
+@import "base/_headings.less";
+@import "base/_blockquotes.less";
+@import "base/_lists.less";
+@import "base/_tables.less";
+@import "base/_forms.less";
+@import "base/_grid.less";
 
 
 
 
 // Objects and abstractions
-@import "objects/colors";
-@import "objects/buttons";
-@import "objects/groups";
-@import "objects/dropdowns";
-@import "objects/navigation";
-@import "objects/breadcrumbs";
-@import "objects/wells";
-@import "objects/badges";
-@import "objects/progress";
-@import "objects/tooltips";
+@import "objects/_colors.less";
+@import "objects/_buttons.less";
+@import "objects/_groups.less";
+@import "objects/_dropdowns.less";
+@import "objects/_navigation.less";
+@import "objects/_breadcrumbs.less";
+@import "objects/_wells.less";
+@import "objects/_badges.less";
+@import "objects/_progress.less";
+@import "objects/_tooltips.less";
 
 
 
 
 // Helper classes
-@import "generic/helper";
-@import "generic/conditional";
-@import "generic/print";
-@import "generic/debug";
+@import "generic/_helper.less";
+@import "generic/_conditional.less";
+@import "generic/_print.less";
+@import "generic/_debug.less";
