--- a/less/_defaults.less
+++ b/less/_defaults.less
@@ -3,7 +3,7 @@
 //------------------------------------//
 // Set to `false` if you do not wish to adopt 
 // global `box-sizing: border-box;`
-@global-border-box: true !default;
+@global-border-box: true;
 
 
 
@@ -13,7 +13,7 @@
 //------------------------------------//
 // Enabling debug mode allows for potential issues 
 // to be visually displayed in the browser. 
-@debug-mode: false !default;
+@debug-mode: false;
 
 
 
@@ -22,19 +22,19 @@
 //  @BASE
 //------------------------------------//
 // Base font sizes and colors
-@base-font-size:    16px !default;
-@base-line-height:  24px !default;
-@base-font-color:   #333333 !default;
-@base-link-color:   #62b3e7 !default;
+@base-font-size:    16px;
+@base-line-height:  24px;
+@base-font-color:   #333333;
+@base-link-color:   #62b3e7;
 
 
 // Base font-family
-@base-font-family:  FreeSans, Arimo, "Droid Sans", Helvetica, Arial, sans-serif !default;
+@base-font-family:  FreeSans, Arimo, "Droid Sans", Helvetica, Arial, sans-serif;
 
 
 // Element spacing and line-height ratio
-@base-spacing-unit: @base-line-height !default;
-@half-spacing-unit: @base-spacing-unit / 2 !default;
+@base-spacing-unit: @base-line-height;
+@half-spacing-unit: @base-spacing-unit / 2;
 @line-height-ratio: @base-line-height / @base-font-size;
 
  
@@ -44,11 +44,11 @@
 //  @RESPONSIVE
 //------------------------------------//
 // Breakpoints
-@extra-small-start: 30em !default;
-@small-start:       48em !default;
-@medium-start:      60em !default;
-@large-start:       70em !default;
-@extra-large-start: 80em !default;
+@extra-small-start: 30em;
+@small-start:       48em;
+@medium-start:      60em;
+@large-start:       70em;
+@extra-large-start: 80em;
 
 
 
@@ -57,19 +57,19 @@
 //  @FONT-SIZES
 //------------------------------------//
 // Font-sizes (in pixels)
-@giga-size: 96px !default;
-@mega-size: 72px !default;
-@kilo-size: 64px !default;
+@giga-size: 96px;
+@mega-size: 72px;
+@kilo-size: 64px;
 
-@h1-size: 36px !default;
-@h2-size: 30px !default;
-@h3-size: 24px !default;
-@h4-size: 20px !default;
-@h5-size: 16px !default;
-@h6-size: 14px !default;
+@h1-size: 36px;
+@h2-size: 30px;
+@h3-size: 24px;
+@h4-size: 20px;
+@h5-size: 16px;
+@h6-size: 14px;
 
-@small-size: 12px !default;
-@micro-size: 10px !default;
+@small-size: 12px;
+@micro-size: 10px;
 
 
 
@@ -78,41 +78,41 @@
 //  @COLORS
 //------------------------------------//
 // Background colors
-@bg-white:        #ffffff !default;
-@bg-black:        #222222 !default;
-@bg-light-gray:   #f9f9f9 !default;
-@bg-gray:         #999999 !default;
-@bg-light-green:  #dff0d8 !default;
-@bg-green:        #5cb85c !default;
-@bg-light-blue:   #d9edf7 !default;
-@bg-blue:         #5bc0de !default;
-@bg-light-yellow: #fcf8e3 !default;
-@bg-yellow:       #ed9c28 !default;
-@bg-light-red:    #f2dede !default;
-@bg-red:          #d9534f !default;
+@bg-white:        #ffffff;
+@bg-black:        #222222;
+@bg-light-gray:   #f9f9f9;
+@bg-gray:         #999999;
+@bg-light-green:  #dff0d8;
+@bg-green:        #5cb85c;
+@bg-light-blue:   #d9edf7;
+@bg-blue:         #5bc0de;
+@bg-light-yellow: #fcf8e3;
+@bg-yellow:       #ed9c28;
+@bg-light-red:    #f2dede;
+@bg-red:          #d9534f;
 
 
 // Type colors
-@color-white:  #ffffff !default;
-@color-black:  #222222 !default;
-@color-gray:   #999999 !default;
-@color-green:  #468847 !default;
-@color-blue:   #3a87ad !default;
-@color-red:    #d2322d !default;
-@color-yellow: #c09853 !default;
+@color-white:  #ffffff;
+@color-black:  #222222;
+@color-gray:   #999999;
+@color-green:  #468847;
+@color-blue:   #3a87ad;
+@color-red:    #d2322d;
+@color-yellow: #c09853;
 
 
 // Selection colors
-@selection-background: #666666 !default;
-@selection-color:      #ffffff !default;
+@selection-background: #666666;
+@selection-color:      #ffffff;
 
 
 // Form placeholder colors
-@placeholder-color: #bbbbbb !default;
+@placeholder-color: #bbbbbb;
 
 
 // Colors used for our objects' borders, etc
-@object-ui-color: #ededed !default;
+@object-ui-color: #ededed;
  
 
 
@@ -121,21 +121,21 @@
 //  @OBJECTS
 //------------------------------------//
 // Gutter size 
-@gutters: 2% !default;
+@gutters: 2%;
 
 
 // Prefix for grid columns. By default columns
 // are formatted as `.column-8`
-@column-prefix: 'column-' !default;
+@column-prefix: 'column-';
 
 
 // Dictate how many columns you would like your 
 // grid system to use. Default is 16.
-@column-number:  16 !default; 
+@column-number:  16; 
 
 
 // Border radius value for `.border-radius` class
-@border-radius: 4px !default;
+@border-radius: 4px;
 
 
 
@@ -149,43 +149,43 @@
 
 
 // Utility
-@use-normalize:   true !default;
-@use-clearfix:    true !default;
-@use-shared:      true !default;
+@use-normalize:   true;
+@use-clearfix:    true;
+@use-shared:      true;
 
 
 // Base
-@use-main:        true !default;
-@use-selection:   true !default;
-@use-container:   true !default;
-@use-typography:  true !default;
-@use-headings:    true !default;
-@use-blockquotes: true !default;
-@use-lists:       true !default;
-@use-tables:      true !default;
-@use-forms:       true !default;
-@use-grid:        true !default;
+@use-main:        true;
+@use-selection:   true;
+@use-container:   true;
+@use-typography:  true;
+@use-headings:    true;
+@use-blockquotes: true;
+@use-lists:       true;
+@use-tables:      true;
+@use-forms:       true;
+@use-grid:        true;
   // Using push and pull classes for grid
   // columns takes a lot of code. Set to
   // `true` if needed.
-  @use-push:	  false !default;
-  @use-pull:	  false !default;
+  @use-push:	  false;
+  @use-pull:	  false;
 
   
 // Objects and abstractions
-@use-colors:      true !default;
-@use-buttons:     true !default;
-@use-groups:      true !default;
-@use-dropdowns:   true !default;
-@use-navigation:  true !default;
-@use-breadcrumbs: true !default;
-@use-wells:       true !default;
-@use-badges:      true !default;
-@use-progress:    true !default;
-@use-tooltips:    true !default;
+@use-colors:      true;
+@use-buttons:     true;
+@use-groups:      true;
+@use-dropdowns:   true;
+@use-navigation:  true;
+@use-breadcrumbs: true;
+@use-wells:       true;
+@use-badges:      true;
+@use-progress:    true;
+@use-tooltips:    true;
 
 
 // Helpers
-@use-helper:      true !default;
-@use-conditional: true !default;
-@use-print:       true !default;
+@use-helper:      true;
+@use-conditional: true;
+@use-print:       true;
