--- a/less/generic/_print.less
+++ b/less/generic/_print.less
@@ -1,4 +1,4 @@
-@if @use-print == true {
+.use-pring(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $PRINT
     //------------------------------------//
@@ -107,3 +107,5 @@
         }
     }
 }
+
+.use-print(@use-print); 
