--- a/less/objects/_progress.less
+++ b/less/objects/_progress.less
@@ -1,4 +1,4 @@
-@if @use-progress == true {
+.use-progress(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $PROGRESS
     //------------------------------------//
@@ -97,3 +97,5 @@
         100% { background-position: 50px 50px; }
     }
 }
+
+.use-progress(@use-progress); 
