--- a/less/base/_selection.less
+++ b/less/base/_selection.less
@@ -1,4 +1,4 @@
-@if @use-selection == true {
+.use-selection(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $SELECTION
     //------------------------------------//
@@ -19,3 +19,5 @@
         }
     }
 }
+
+.use-selection(@use-selection); 
