Add `line-height` output to `.font-size` mixin

--- a/less/_defaults.less
+++ b/less/_defaults.less
@@ -34,8 +34,8 @@
 
 // Element spacing and line-height ratio
 @base-spacing-unit: @base-line-height;
-@half-spacing-unit: @base-spacing-unit / 2;
-@line-height-ratio: @base-line-height / @base-font-size;
+@half-spacing-unit: (@base-spacing-unit / 2);
+@line-height-ratio: (@base-line-height / @base-font-size);
 
  
 
