--- a/less/base/_type.less
+++ b/less/base/_type.less
@@ -43,7 +43,8 @@
 
     // Other elements
     abbr {
-        &[title], &[data-original-title] {
+        &[title], 
+		&[data-original-title] {
             cursor: help;
             border-bottom: 1px dotted #999;
         }
