Finish grid, push and pull generating mixins

--- a/less/_defaults.less
+++ b/less/_defaults.less
@@ -126,7 +126,7 @@
 
 // Prefix for grid columns. By default columns
 // are formatted as `.column-8`
-@column-prefix: 'column-';
+@column-prefix: column-;
 
 
 // Dictate how many columns you would like your 
