Syntactic change to guarded mixins

--- a/less/base/_blockquotes.less
+++ b/less/base/_blockquotes.less
@@ -1,4 +1,4 @@
-.use-blockquotes(@boolean) when (@boolean = true) {
+.blockquotes(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $BLOCKQUOTES
     //------------------------------------//
@@ -35,4 +35,4 @@
     }
 }
 
-.use-blockquotes(@use-blockquotes); 
+.blockquotes(@use-blockquotes); 
