--- a/less/base/_container.less
+++ b/less/base/_container.less
@@ -1,4 +1,4 @@
-.use-container(@boolean) when (@boolean = true) {
+.container(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $CONTAINER
     //------------------------------------//
@@ -13,4 +13,4 @@
     .breakpoint(extra-large) { .container { width: 1140px; } }
 }
 
-.use-container(@use-container); 
+.container(@use-container); 
