--- a/less/base/_forms.less
+++ b/less/base/_forms.less
@@ -1,4 +1,4 @@
-.use-forms(@boolean) when (@boolean = true) {
+.forms(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $FORMS
     //------------------------------------//
@@ -254,4 +254,4 @@
     :-moz-placeholder { color: @placeholder-color; }
 }
 
-.use-forms(@use-forms); 
+.forms(@use-forms); 
