--- a/less/base/_headings.less
+++ b/less/base/_headings.less
@@ -1,4 +1,4 @@
-.use-headings(@boolean) when (@boolean = true) {
+.headings(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $HEADINGS
     //------------------------------------//
@@ -153,4 +153,4 @@
     }
 }
 
-.use-headings(@use-headings); 
+.headings(@use-headings); 
