--- a/less/base/_lists.less
+++ b/less/base/_lists.less
@@ -1,4 +1,4 @@
-.use-lists(@boolean) when (@boolean = true) {
+.lists(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $LISTS
     //------------------------------------//   
@@ -123,4 +123,4 @@
     }
 }
 
-.use-lists(@use-lists); 
+.lists(@use-lists); 
