--- a/less/base/_main.less
+++ b/less/base/_main.less
@@ -1,4 +1,4 @@
-.use-main(@boolean) when (@boolean = true) {
+.main(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $MAIN
     //------------------------------------//
@@ -34,4 +34,4 @@
     html[dir="rtl"] { direction: rtl; }
 }
 
-.use-main(@use-main); 
+.main(@use-main); 
