--- a/less/base/_selection.less
+++ b/less/base/_selection.less
@@ -1,4 +1,4 @@
-.use-selection(@boolean) when (@boolean = true) {
+.selection(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $SELECTION
     //------------------------------------//
@@ -20,4 +20,4 @@
     }
 }
 
-.use-selection(@use-selection); 
+.selection(@use-selection); 
