--- a/less/base/_type.less
+++ b/less/base/_type.less
@@ -1,4 +1,4 @@
-.use-typography(@boolean) when (@boolean = true) {
+.typography(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $TYPE
     //------------------------------------//
@@ -64,4 +64,4 @@
     }
 }
 
-.use-typography(@use-typography); 
+.typography(@use-typography); 
