--- a/less/generic/_helper.less
+++ b/less/generic/_helper.less
@@ -1,4 +1,4 @@
-.use-helper(@boolean) when (@boolean = true) {
+.helper(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $HELPER
     //------------------------------------//
@@ -112,4 +112,4 @@
     .pill { border-radius: 25px; }
 }
 
-.use-helper(@use-helper); 
+.helper(@use-helper); 
