--- a/less/generic/_normalize.less
+++ b/less/generic/_normalize.less
@@ -1,4 +1,4 @@
-.use-normalize(@boolean) when (@boolean = true) {
+.normalize(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $NORMALIZE  
     //------------------------------------// 
@@ -194,4 +194,4 @@
     th { padding: 0; }
 }
 
-.use-normalize(@use-normalize); 
+.normalize(@use-normalize); 
