--- a/less/generic/_print.less
+++ b/less/generic/_print.less
@@ -1,4 +1,4 @@
-.use-pring(@boolean) when (@boolean = true) {
+.pring(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $PRINT
     //------------------------------------//
@@ -108,4 +108,4 @@
     }
 }
 
-.use-print(@use-print); 
+.print(@use-print); 
