--- a/less/generic/_shared.less
+++ b/less/generic/_shared.less
@@ -1,4 +1,4 @@
-.use-shared(@boolean) when (@boolean = true) {
+.shared(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $SHARED
     //------------------------------------//
@@ -36,4 +36,4 @@
     }
 }
 
-.use-shared(@use-shared); 
+.shared(@use-shared); 
