--- a/less/objects/_badges.less
+++ b/less/objects/_badges.less
@@ -1,4 +1,4 @@
-.use-badges(@boolean) when (@boolean = true) {
+.badges(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $BADGES
     //------------------------------------//
@@ -51,4 +51,4 @@
 	.badge:empty { display: none; }
 }
 
-.use-badges(@use-badges); 
+.badges(@use-badges); 
