--- a/less/objects/_buttons.less
+++ b/less/objects/_buttons.less
@@ -1,4 +1,4 @@
-.use-buttons(@boolean) when (@boolean = true) {
+.buttons(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $BUTTONS
     //------------------------------------//
@@ -285,4 +285,4 @@
     }
 }
 
-.use-buttons(@use-buttons); 
+.buttons(@use-buttons); 
