--- a/less/objects/_dropdowns.less
+++ b/less/objects/_dropdowns.less
@@ -1,4 +1,4 @@
-.use-dropdowns(@boolean) when (@boolean = true) {
+.dropdowns(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $DROPDOWNS
     //------------------------------------//
@@ -166,4 +166,4 @@
     }
 }
 
-.use-dropdowns(@use-dropdowns); 
+.dropdowns(@use-dropdowns); 
