--- a/less/objects/_groups.less
+++ b/less/objects/_groups.less
@@ -1,4 +1,4 @@
-.use-groups(@boolean) when (@boolean = true) {
+.groups(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $GROUPS
     //------------------------------------//
@@ -100,4 +100,4 @@
     }
 }
 
-.use-groups(@use-groups); 
+.groups(@use-groups); 
