--- a/less/objects/_navigation.less
+++ b/less/objects/_navigation.less
@@ -1,4 +1,4 @@
-.use-navigation(@boolean) when (@boolean = true) {
+.navigation(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $NAVIGATION
     //------------------------------------//
@@ -373,4 +373,4 @@
     }
 }
 
-.use-navigation(@use-navigation); 
+.navigation(@use-navigation); 
