--- a/less/objects/_progress.less
+++ b/less/objects/_progress.less
@@ -1,4 +1,4 @@
-.use-progress(@boolean) when (@boolean = true) {
+.progress(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $PROGRESS
     //------------------------------------//
@@ -98,4 +98,4 @@
     }
 }
 
-.use-progress(@use-progress); 
+.progress(@use-progress); 
