--- a/less/objects/_tooltips.less
+++ b/less/objects/_tooltips.less
@@ -1,4 +1,4 @@
-.use-tooltips(@boolean) when (@boolean = true) {
+.tooltips(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $TOOLTIPS
     //------------------------------------//
@@ -225,4 +225,4 @@
     [class*='hint-'].border-radius:after { border-radius: @border-radius; }
 }
 
-.use-tooltips(@use-tooltips); 
+.tooltips(@use-tooltips); 
