--- a/less/objects/_wells.less
+++ b/less/objects/_wells.less
@@ -1,4 +1,4 @@
-.use-wells(@boolean) when (@boolean = true) {
+.wells(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $WELLS
     //------------------------------------//
@@ -102,4 +102,4 @@
     .well .close { margin-top: 6px; }
 }
 
-.use-wells(@use-wells); 
+.wells(@use-wells); 
