--- a/less/base/_tables.less
+++ b/less/base/_tables.less
@@ -1,4 +1,4 @@
-.use-tables(@boolean) when (@boolean = true) {
+.tables(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $TABLES
     //------------------------------------//
@@ -81,4 +81,4 @@
     }
 }
 
-.use-tables(@use-tables); 
+.tables(@use-tables); 
