--- a/less/generic/_clearfix.less
+++ b/less/generic/_clearfix.less
@@ -1,4 +1,4 @@
-.use-clearfix(@boolean) when (@boolean = true) {
+.clearfix(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $CLEARFIX
     //------------------------------------//
@@ -11,4 +11,4 @@
     }
 }
 
-.use-clearfix(@use-clearfix); 
+.clearfix(@use-clearfix); 
