--- a/less/generic/_conditional.less
+++ b/less/generic/_conditional.less
@@ -1,4 +1,4 @@
-.use-conditional(@boolean) when (@boolean = true) {
+.conditional(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $CONDITIONAL
     //------------------------------------//
@@ -69,4 +69,4 @@
     }
 }
 
-.use-conditional(@use-conditional); 
+.conditional(@use-conditional); 
