--- a/less/objects/_breadcrumbs.less
+++ b/less/objects/_breadcrumbs.less
@@ -1,4 +1,4 @@
-.use-breadcrumbs(@boolean) when (@boolean = true) {
+.breadcrumbs(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $BREADCRUMBS
     //------------------------------------//
@@ -34,4 +34,4 @@
     }
 }
 
-.use-breadcrumbs(@use-breadcrumbs); 
+.breadcrumbs(@use-breadcrumbs); 
