--- a/less/objects/_colors.less
+++ b/less/objects/_colors.less
@@ -1,4 +1,4 @@
-.use-colors(@boolean) when (@boolean = true) {
+.colors(@boolean) when (@boolean = true) {
     //------------------------------------//
     //  $COLORS
     //------------------------------------//
@@ -44,4 +44,4 @@
     .color-red { color: @color-red; }
 }
 
-.use-colors(@use-colors); 
+.colors(@use-colors); 
