--- a/less/generic/_helper.less
+++ b/less/generic/_helper.less
@@ -107,6 +107,10 @@
         width: 0;
     }
 
+    
+    // Border radius
+    .border-radius { border-radius: @border-radius; }
+    
 
     // Pill style
     .pill { border-radius: 25px; }
