--- a/less/objects/_groups.less
+++ b/less/objects/_groups.less
@@ -20,9 +20,10 @@
         background-color: #fff;
         border: 1px solid #ddd;
         color: #666;
-        .font-size(12px); 
         padding: 4px 7px;
         width: auto;
+        
+        & .icon { .font-size(14px); }
     }
 
     .breakpoint(small) {
