--- a/less/base/_lists.less
+++ b/less/base/_lists.less
@@ -49,7 +49,7 @@
 
 
     // Line
-    .line li {
+    .list-line li {
         border-bottom: 1px solid #eee;
         padding: 5px 0;
         
@@ -78,7 +78,7 @@
             &:last-child { margin-right: 0px; }
         }
         
-        .line.list-inline li {
+        .list-line.list-inline li {
             margin-right: 15px;
             
             &:after {
@@ -93,11 +93,11 @@
 
 
     // Fills
-    .fill-even li, 
-    .fill-odd li { padding-left: 5px; }
+    .list-fill-even li, 
+    .list-fill-odd li { padding-left: 5px; }
 
-    .fill-even li:nth-child(even), 
-    .fill-odd li:nth-child(odd) { background-color: #f9f9f9; }
+    .list-fill-even li:nth-child(even), 
+    .list-fill-odd li:nth-child(odd) { background-color: #f9f9f9; }
 
 
     // Definition Lists
