Make responsive navigation 100% width

--- a/css/concise.css
+++ b/css/concise.css
@@ -2098,6 +2098,7 @@ nav .dropdown li {
 }
 .naver .naver-wrapper {
   height: auto;
+  width: 100%;
 }
 .naver.enabled .naver-handle {
   display: block;
