--- a/less/base/_lists.less
+++ b/less/base/_lists.less
@@ -106,7 +106,7 @@
     dd { margin-left: 0px; }
 
     .breakpoint(small) {
-        dl.horizontal {
+        dl.dl-horizontal {
             overflow: hidden;
             > {
                 dt {
